--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "env": "^0.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
